--- a/TopShelfCustomer/TopShelfCustomer/Views/ShopView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/ShopView.xaml
@@ -27,39 +27,43 @@
                     </Frame>
                     <!-- Store Name Label -->
                     <Label Text="{Binding SelectedStoreName}" FontSize="30" HorizontalOptions="Center"
-                           FontFamily="{StaticResource MediumFont}" VerticalTextAlignment="Center" TextColor="White" />
+                           FontFamily="{StaticResource MediumFont}" VerticalTextAlignment="Center"
+                           TextColor="{StaticResource LightTextColor}" />
                 </StackLayout>
             </ContentView>
 
             <!-- List of Products -->
-            <ListView x:Name="StoreList" ItemsSource="{Binding ShopInventory}" RowHeight="60" SeparatorVisibility="None" SelectionMode="None"
-                              BackgroundColor="{StaticResource Darkest}" Margin="20, 30, 20, 30" Grid.Row="1">
+            <ListView x:Name="StoreList" ItemsSource="{Binding ShopInventory}" RowHeight="60"
+                      SeparatorVisibility="None" SelectionMode="None" Margin="10, 30, 10, 30" 
+                      BackgroundColor="{StaticResource Darkest}" Grid.Row="1" MinimumHeightRequest="40" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Frame BackgroundColor="{StaticResource Lightest}" Margin="0, 2, 0, 2">
-                                <StackLayout Orientation="Horizontal" Spacing="30" VerticalOptions="Center" Padding="10, 0, 10, 0">
+                            <Frame BackgroundColor="{StaticResource Lightest}" Margin="2" VerticalOptions="Center">
+                                <StackLayout Orientation="Horizontal" Spacing="15" VerticalOptions="Center" Padding="5, 0, 5, 0">
                                     <!-- Product Name Label -->
-                                    <Label Text="{Binding Name}" FontFamily="{StaticResource MediumFont}" HorizontalOptions="Start" TextColor="{StaticResource Darkest}"/>
+                                    <Label Text="{Binding Name}" FontFamily="{StaticResource MediumFont}"
+                                           HorizontalOptions="StartAndExpand" TextColor="{StaticResource Darkest}"
+                                           FontSize="14"/>
                                     <!-- Product Price -->
-                                    <Label TextColor="{StaticResource Darkest}" FontFamily="{StaticResource NormalFont}">
+                                    <Label TextColor="{StaticResource Darkest}" FontFamily="{StaticResource NormalFont}"
+                                           HorizontalOptions="EndAndExpand" HorizontalTextAlignment="Center">
                                         <Label.FormattedText>
                                             <FormattedString>
                                                 <FormattedString.Spans>
                                                     <Span Text="$" />
                                                     <Span Text="{Binding Price}"/>
-                                                </FormattedString.Spans>
+                                                </FormattedString.Spans> 
                                             </FormattedString>
                                         </Label.FormattedText>
                                     </Label>
-                                    <ContentView HeightRequest="40" HorizontalOptions="EndAndExpand">
-                                        <StackLayout Orientation="Horizontal">
-                                            <!-- Quantity Entry -->
-                                            <Entry Placeholder="1" FontFamily="{StaticResource NormalFont}" BackgroundColor="White"
-                                                   PlaceholderColor="Gray" HorizontalTextAlignment="Center" Keyboard="Numeric"
-                                                   Text="0" TextColor="Black"/>
-                                        </StackLayout>
-                                    </ContentView>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="End">
+                                        <!-- Quantity Entry -->
+                                        <Entry Placeholder="1" FontFamily="{StaticResource NormalFont}" BackgroundColor="{StaticResource Lightest}"
+                                               PlaceholderColor="Gray" HorizontalTextAlignment="Center" Keyboard="Numeric"
+                                               Text="0" TextColor="{StaticResource Darkest}" HeightRequest="38" IsReadOnly="True"/>
+                                        <Stepper HeightRequest="50" Minimum="0" Maximum="99"/>
+                                    </StackLayout>
                                 </StackLayout>
                             </Frame>
                         </ViewCell>
